[package]
name = "clnrm"
version = "0.1.0"
edition = "2021"
authors = ["Cleanroom Contributors"]
description = "Deterministic, hermetic execution environment for testing and validation"
license = "MIT"
repository = "https://github.com/sac/ggen"
keywords = ["testing", "hermetic", "deterministic", "containers", "validation"]
categories = ["development-tools", "testing"]

[dependencies]
# Core dependencies (always included)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.15", features = ["chrono"] }
thiserror = "2.0"
anyhow = "1.0"
tokio = { version = "1.47", features = ["full"] }
async-trait = "0.1"
base64 = "0.22"
tracing = "0.1"
uuid = { version = "1.18", features = ["v4", "serde"] }
rand = "0.9"
rand_chacha = "0.9"
fastrand = "2.3"
regex = "1.12"
tempfile = "3.23"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.9"
whoami = "1.6"
sha2 = "0.10"

# Container dependencies (required)
testcontainers = { version = "0.25", features = ["blocking"] }
testcontainers-modules = { version = "0.13", features = ["postgres", "redis"] }
futures-util = "0.3"

# CLI dependencies
clap = { version = "4.5", features = ["derive"] }
tracing-subscriber = "0.3"
serde_yaml = "0.9"

# Optional features
[features]
default = []
coverage = []
signing = []
services = []

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[[bin]]
name = "cleanroom"
path = "src/bin/cleanroom.rs"

[[bin]]
name = "micro_cli"
path = "src/bin/micro_cli.rs"

[dev-dependencies]
criterion = "0.7"
proptest = "1.8"
insta = "1.43"
cucumber = { version = "0.21", features = ["macros"] }
assert_cmd = "2.0"
predicates = "3.1"
mockito = "1.7"
shell-words = "1.1"

[lints.clippy]
# Production code lints - deny unsafe patterns
expect_used = "deny"
unwrap_used = "deny"
panic = "warn"
indexing_slicing = "warn"
