[package]
name = "rgen-cli-lib"
version = "0.1.0"
authors = ["Sean Chatman <sean@chatmangpt.com>"]
description = "CLI interface for rgen"
edition = "2021"
license = "MIT"
repository = "https://github.com/seanchatmangpt/rgen"
# readme = "README.md"  # No README.md in cli directory
keywords = ["cli", "code-generation", "rdf", "templates"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
anyhow = "1.0"
rgen-utils = { path = "../utils", version = "0.1.0" }
rgen-core = { path = "../rgen-core", version = "0.1.0" }
clap_complete = "4.5.50"
sha2 = "0.10"
tera = "1.0"
dotenvy = "0.15"
glob = "0.3"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
semver = "1.0"
dirs = "5.0"
oxigraph = "0.4"
walkdir = "2.0"
serde_yaml = "0.9"
rayon = "1.8"
colored = "2.0"

[dependencies.clap]
version = "4.5.37"
features = ["cargo", "derive"]

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
