[package]
name = "ggen-domain"
version = "2.0.0"
authors = ["Sean Chatman <sean@chatmangpt.com>"]
description = "Domain logic layer for ggen"
edition = "2021"
license = "MIT"
repository = "https://github.com/seanchatmangpt/ggen"
homepage = "https://github.com/seanchatmangpt/ggen"
keywords = ["cli", "code-generation", "rdf", "templates"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
