[package]
name = "ggen-ai"
version = "1.2.0"
edition = "2021"
authors = ["Sean Chatman <sean@chatmangpt.com>"]
description = "Thin wrapper around genai for ggen - LLM integration with environment support"
license = "MIT"

[dependencies]
# Core ggen dependencies
ggen-core = { path = "../ggen-core", version = "1.2.0" }
ggen-utils = { path = "../utils", version = "1.2.0" }

# HTTP client and async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time handling
chrono = { workspace = true }

# UUID generation
uuid = { workspace = true }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Configuration and environment
dotenvy = "0.15"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Streaming and futures
futures = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Template engine (for prompt templating in generators)
tera = { workspace = true }

# Regular expressions for validation
regex = { workspace = true }

# Multi-provider AI client
genai = "0.4"

# LLM Response Caching
moka = { version = "0.12", features = ["future"] }

# SPARQL support
oxigraph = "0.5"

# Crypto for caching
sha2 = "0.10"

[features]
default = []
all-integrations = []

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
testcontainers = "0.22"
rand = "0.8"

[lib]
name = "ggen_ai"
path = "src/lib.rs"
