[package]
name = "ggen-mcp"
version = "0.2.4"
edition = "2021"
authors = ["Sean Chatman <sean@chatmangpt.com>"]
description = "MCP server for ggen CLI - exposes template generation, graph operations, and project management"
license = "MIT"

[dependencies]
rmcp = { version = "0.8.0", features = ["server", "transport-io"] }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1.10"
rand = "0.8"
mockall = "0.12"
tempfile = "3.8"
thiserror = "1.0"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
tokio-util = "0.7"
futures = "0.3"

# Performance optimization
lru = "0.12"
parking_lot = "0.12"
dashmap = "6.0"

# Local dependencies
ggen-core = { path = "../ggen-core" }
ggen-ai = { path = "../ggen-ai" }
ggen-utils = { path = "../utils" }

[[bin]]
name = "ggen-mcp"
path = "src/main.rs"

[lib]
name = "ggen_mcp"
path = "src/lib.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tokio-test = "0.4"
futures = "0.3"
futures-util = "0.3"
proptest = "1.4"
test-case = "3.3"
tokio = { version = "1", features = ["full", "test-util"] }
serde_json = "1.0"
tempfile = "3.8"
mockall = "0.12"
env_logger = "0.11"
log = "0.4"
rand = "0.8"

[[bench]]
name = "tools"
harness = false

[[bench]]
name = "transport"
harness = false

[[bench]]
name = "cache"
harness = false

[[bench]]
name = "server_benchmarks"
harness = false

[features]
default = []
stress-test = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
inherits = "release"

[profile.test]
opt-level = 1
debug = true
