[workspace]
# Empty workspace to exclude from parent

[package]
name = "minimal-mcp-server"
version = "0.1.0"
edition = "2021"
authors = ["Sean Chatman <sean@chatmangpt.com>"]
description = "Minimal MCP server proving the protocol works - zero dependencies on ggen"

[[bin]]
name = "minimal-mcp-server"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.8.0", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
