[package]
name = "ollama-mcp"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "ollama-mcp"
path = "src/main.rs"

[dependencies]
ggen-ai = { path = "../ggen-ai" }
rmcp = { version = "0.8.0", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
