[package]
name = "utils"
version = "1.0.0"
authors = ["Sean Chatman <sean@example.com>"]
description = "Shared utilities for rgen"
edition = "2021"

[features]
nightly = []
termlog = []
syslog = []
journald = []

[dependencies]
anyhow = "1.0"
thiserror = "2.0.12"
backtrace = "0.3.75"
color-backtrace = "0.7.0"
config = "0.15.11"
lazy_static = "1.5.0"
slog = "2.7.0"
slog-syslog = "0.13.0"
slog-term = "2.9.1"
slog-scope = "4.4.0"
slog-async = "2.8.0"
slog-stdlog = "4.1.1"
clap = "4.5.37"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
toml = "0.8"
tera = "1.0"
oxigraph = "0.4"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "linux")'.dependencies]
slog-journald = "2.2.0"
