[package]
name = "advanced-cache-registry"
version = "0.1.0"
edition = "2021"

[dependencies]
ggen-core = { path = "../../ggen-core" }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
colored = "2.0"
chrono = "0.4"

[[bin]]
name = "cache-registry-demo"
path = "src/main.rs"
