[package]
name = "advanced-fullstack-integration"
version = "0.1.0"
edition = "2021"

[dependencies]
ggen-core = { path = "../../ggen-core" }
ggen-ai = { path = "../../ggen-ai" }
tokio = { version = "1.42", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"

[dev-dependencies]
tempfile = "3.14"

[[bin]]
name = "fullstack-generator"
path = "src/main.rs"
