[package]
name = "advanced-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "advanced-cli"
path = "src/main.rs"

[[bench]]
name = "cli_benchmarks"
harness = false

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
