[package]
name = "frontmatter-cli"
version = "0.1.0"
edition = "2021"
description = "Example CLI for frontmatter parsing"
license = "MIT"
repository = "https://github.com/seanchatmangpt/ggen"
keywords = ["example", "frontmatter", "yaml"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }

