[package]
name = "natural-market-search"
version = "0.1.0"
edition = "2021"
description = "Example natural language marketplace search"
license = "MIT"
repository = "https://github.com/seanchatmangpt/ggen"
keywords = ["example", "search", "marketplace"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.47", features = ["full"] }

