[package]
name = "p2p-marketplace-example"
version = "1.0.0"
edition = "2021"

[dependencies]
ggen = { path = "../.." }
tokio = { version = "1.47", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
