[package]
name = "sparql-engine"
version = "0.1.0"
edition = "2021"
authors = ["ggen examples"]
description = "AI-powered SPARQL query engine with natural language interface"
license = "MIT"

[[bin]]
name = "sparql-engine"
path = "src/main.rs"

[dependencies]
# Core ggen dependencies
ggen-core = { path = "../../ggen-core" }
ggen-ai = { path = "../../ggen-ai" }

# RDF/SPARQL
oxigraph = "0.5"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# AI integration
genai = "0.4"

# Utilities
futures = "0.3"
futures-util = "0.3"

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
