[package]
name = "cargo-project"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Production-grade Rust project CLI"

[[bin]]
name = "cargo-project"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
bp-core = { path = "../crates/core" }
bp-config = { path = "../crates/config" }
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
